--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
-
+apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
 
 android {
@@ -23,10 +23,33 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation('com.android.support:support-v4:28.0.0') {}
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation('com.android.support.constraint:constraint-layout:1.1.3') {}
+    // kotlin libs
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    //Room Database
+    kapt('android.arch.persistence.room:compiler:1.1.1')
+    implementation 'android.arch.persistence.room:runtime:1.1.1'
+    //Lifecycle Dependency
+    kapt 'android.arch.lifecycle:compiler:1.1.1'
+    implementation 'android.arch.lifecycle:runtime:1.1.1'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
+    implementation 'android.arch.lifecycle:common-java8:1.1.1'
+    //Dagger Dependency
+    def daggerVersion = '2.16'
+    kapt "com.google.dagger:dagger-compiler:$daggerVersion"
+    kapt "com.google.dagger:dagger-android-processor:$daggerVersion"
+    implementation "com.google.dagger:dagger:$daggerVersion"
+    implementation "com.google.dagger:dagger-android:$daggerVersion"
+    implementation "com.google.dagger:dagger-android-support:$daggerVersion"
+    implementation 'com.android.support:multidex:1.0.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    implementation project(':SalesforceMobileSDK-Android:libs:SalesforceAnalytics')
+    implementation project(':SalesforceMobileSDK-Android:libs:SalesforceSDK')
+    implementation project(':SalesforceMobileSDK-Android:libs:SmartStore')
+    implementation project(':SalesforceMobileSDK-Android:libs:SmartSync')
 }
